<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.easyframe</groupId>
	<artifactId>ef-orm</artifactId>
	<version>1.13.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>EasyFrame ORM</name>
	<modules>
		<module>common-core</module>
		<module>common-orm</module>
		<module>orm-test</module>
		<module>geequery-maven-plugin</module>
		<module>orm-code-generator</module>
		<module>spring-data-geequery</module>
	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<springframework.version>4.3.7.RELEASE</springframework.version>
		<springframework.security.version>3.1.4.RELEASE</springframework.security.version>
		<spring-data.version>2.0.9.RELEASE</spring-data.version>
		<slf4j.version>1.7.21</slf4j.version>
		<querydsl.version>4.2.1</querydsl.version>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<maven.compiler.testSource>8</maven.compiler.testSource>
		<maven.compiler.testTarget>8</maven.compiler.testTarget>
	</properties>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- 关于资源文件的放置位置，修改maven习惯为eclipse习惯 -->
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<configuration>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<configuration>
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
					<xmlOutput>true</xmlOutput>
					<findbugsXmlOutputDirectory>target</findbugsXmlOutputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<encoding>UTF-8</encoding>
					<aggregate>true</aggregate>
					<show>public</show>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14.1</version>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<parallel>false</parallel>
				</configuration>
			</plugin>
		</plugins>
	</build>
   <distributionManagement>

         <repository>

           <id>af-fsdmdept-release</id>

             <name>af-fsdmdept-release</name>

           <url>http://10.1.74.162/artifactory/fsdmdept-release</url>

         </repository>

         <snapshotRepository>

           <id>af-fsdmdept-snapshot</id>

             <name>af-fsdmdept-snapshot</name>

             <url>http://10.1.74.162/artifactory/fsdmdept-snapshot</url>

         </snapshotRepository>

    </distributionManagement>
</project>